# experiments

./: README.md
freer/: README.md  experiment-freer.cabal  stack.yaml
freer/src/Control/Monad/Freer/: Class.hs  Concurrent.hs  IO.hs
freer/src/Control/Monad/Freer/Reader/: Class.hs
freer/src/Control/Monad/Freer/State/: Class.hs
freer/src/Data/FTCQueue/: Instances.hs
