name:                   experiment-freer
version:                0.1.0.0
synopsis:               TODO
description:            TODO
homepage:               http://to.do
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              (c) 2016, Peter Trško
category:               Control
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:     README.md

library
  hs-source-dirs:       src
  exposed-modules:
      Control.Monad.Freer.Class
    , Control.Monad.Freer.Concurrent
    , Control.Monad.Freer.IO
    , Control.Monad.Freer.Reader.Class
    , Control.Monad.Freer.State.Class
    , Data.FTCQueue.Instances
  -- other-modules:

  default-language:     Haskell2010
  -- other-extensions:

  build-depends:
      base >=4.8 && <4.9

    , bytestring
    , freer ==0.2.*
    , haxl
    , reflection
    , semigroupoids ==5.*
    , transformers
    , transformers-base

  ghc-options:          -Wall
